# peppernode_test_task

./: .env-example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
apps/managers/: admin.py  models.py  permissions.py
apps/managers/migrations/: 0001_initial.py
apps/products/: admin.py  models.py  serializers.py  urls.py  views.py
apps/products/migrations/: 0001_initial.py
apps/restaurants/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/restaurants/migrations/: 0001_initial.py
apps/tenants/: admin.py  models.py  utils.py
apps/tenants/migrations/: 0001_initial.py
test_task/: settings.py  urls.py
